add gulp tasks, move to specific deployments

--- a/src/dirtyFlag2/wwwroot/default.html
+++ b/src/dirtyFlag2/wwwroot/default.html
@@ -36,7 +36,7 @@
 
     </div>
     <script src="knockout-latest.debug.js"></script>
-    <script src="dirtyFlag2.js"></script>
+    <script src="es5/dirtyFlag2.js"></script>
     <script>
         var vm = function () {
             this.name = ko.observable("Joe Smith").extend({ dirtyFlag: "" });
