--- a/src/dirtyFlag2/wwwroot/tests.html
+++ b/src/dirtyFlag2/wwwroot/tests.html
@@ -9,8 +9,8 @@
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
     <script src="knockout-latest.debug.js"></script>
-    <script src="es5/dirtyFlag2.js"></script>
+    <script type="module" src="harmony/dirtyFlag2.js"></script>
     <script src="qunit.js"></script>
-    <script src="es5/tests.js"></script>
+    <script type="module" src="harmony/tests.js"></script>
 </body>
 </html>
